# nompose

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  docker-compose.yaml
src/: cli.rs  compose.rs  main.rs  template.rs
templates/: nomad.j2
