[package]
name = "nompose"
version = "0.1.0"
authors = ["Bart Willems <crowley@inuits.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "5.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", default-features = false }
terminator = "0.1.0"

[dependencies.tera]
version = "1"
default-features = false

[profile.release]
lto = true
